# 60secs_briefing_bot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-25-wedge.md
docs/superpowers/specs/: 2026-05-25-wedge-design.md
src/wedge/: app.py  bright_data.py  complaints.py  config.py  db.py  discovery.py  g2_confirm.py  llm.py  orchestrator.py  planner.py  synthesis.py  types.py  watcher.py
src/wedge/static/: app.css
src/wedge/templates/: brief.html  index.html  progress.html
tests/: conftest.py  test_app_e2e.py  test_app_endpoints.py  test_bright_data_browser.py  test_bright_data_serp.py  test_bright_data_unlocker.py  test_complaints.py  test_config.py  test_db.py  test_discovery.py  test_g2_confirm.py  test_llm.py  test_orchestrator.py  test_planner.py  test_synthesis_brief.py  test_synthesis_cluster.py  test_types.py  test_watcher.py
tests/fixtures/: g2_asana.html  g2_asana_reviews.html  reddit_asana_thread.html  serp_pm_tool.json
