[project]
name = "wedge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "httpx>=0.27",
    "playwright>=1.42",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
